5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1577_1333.log
== TEST (2019-04-05 21:45:17) 
-- CODE:
conta=30 – 3 ** 2 + 8 // 3 ** 2 * 10
valor=float(conta)
print(valor)
-- ERROR:
File "XXXX", line 1
    conta=30 – 3 ** 2 + 8 // 3 ** 2 * 10
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:45:52) 
-- CODE:
conta=30 – 3 ** 2 + 8 // 3 ** 2 * 10
valor=int(input(conta))
print(valor)
-- ERROR:
File "XXXX", line 1
    conta=30 – 3 ** 2 + 8 // 3 ** 2 * 10
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 22:00:38) 
-- CODE:
conta=30 – 3 ** 2 + 8 // 3 ** 2 * 10
valor=int(input(conta))
print(valor)

-- EXECUTION TIME:
0.171174
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    conta=30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 00:33:55) 
-- CODE:
conta=30 – 3 ** 2 + 8 // 3 ** 2 * 10
valor=int(input(conta))
print(valor)

-- ERROR:
File "XXXX", line 1
    conta=30 – 3 ** 2 + 8 // 3 ** 2 * 10
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:14:30) 
-- CODE:
expressao=(30-3**2+8//3**2*10)   
print(expressao)

-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:14:34) 
-- CODE:
expressao=(30-3**2+8//3**2*10)   
print(expressao)

-- EXECUTION TIME:
0.196424
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
